test/success/unit/_succ_type_basic_2.hs
x :: Bool
main = print "hello"