test/fail/integration/_fail_sem_expr_relnoteq_2.hs
x :: Bool
x = 3 /= "hello"
main = print "hello"